src/base/q
In file included from t.cpp:9:0:
../base/TaskQueue.h: In instantiation of ‘void TaskQueue<T>::put(const T&) [with T = int]’:
../base/TaskQueue.h:47:16:   required from here
../base/TaskQueue.h:23:43: error: no matching function for call to ‘move<int>(const int&)’
     void put(const T& job) { std::move<T> (job); }
                              ~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/7/bits/nested_exception.h:40:0,
                 from /usr/include/c++/7/exception:143,
                 from /usr/include/c++/7/ios:39,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from t.cpp:3:
/usr/include/c++/7/bits/move.h:98:5: note: candidate: template<class _Tp> constexpr typename std::remove_reference< <template-parameter-1-1> >::type&& std::move(_Tp&&)
     move(_Tp&& __t) noexcept
     ^~~~
/usr/include/c++/7/bits/move.h:98:5: note:   template argument deduction/substitution failed:
In file included from t.cpp:9:0:
../base/TaskQueue.h:23:43: note:   cannot convert ‘job’ (type ‘const int’) to type ‘int&&’
     void put(const T& job) { std::move<T> (job); }
                              ~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/7/bits/char_traits.h:39:0,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from t.cpp:3:
/usr/include/c++/7/bits/stl_algobase.h:479:5: note: candidate: template<class _II, class _OI> _OI std::move(_II, _II, _OI)
     move(_II __first, _II __last, _OI __result)
     ^~~~
/usr/include/c++/7/bits/stl_algobase.h:479:5: note:   template argument deduction/substitution failed:
In file included from t.cpp:9:0:
../base/TaskQueue.h:23:43: note:   candidate expects 3 arguments, 1 provided
     void put(const T& job) { std::move<T> (job); }
                              ~~~~~~~~~~~~~^~~~~
../base/TaskQueue.h: In instantiation of ‘void TaskQueue<T>::put(const T&&) [with T = int]’:
../base/TaskQueue.h:47:16:   required from here
../base/TaskQueue.h:24:47: error: no matching function for call to ‘forward<int>(const int&)’
     void put(const T&& job) { std::forward<T> (job); }
                               ~~~~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/7/bits/nested_exception.h:40:0,
                 from /usr/include/c++/7/exception:143,
                 from /usr/include/c++/7/ios:39,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from t.cpp:3:
/usr/include/c++/7/bits/move.h:73:5: note: candidate: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&)
     forward(typename std::remove_reference<_Tp>::type& __t) noexcept
     ^~~~~~~
/usr/include/c++/7/bits/move.h:73:5: note:   template argument deduction/substitution failed:
In file included from t.cpp:9:0:
../base/TaskQueue.h:24:47: note:   cannot convert ‘job’ (type ‘const int’) to type ‘std::remove_reference<int>::type& {aka int&}’
     void put(const T&& job) { std::forward<T> (job); }
                               ~~~~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/7/bits/nested_exception.h:40:0,
                 from /usr/include/c++/7/exception:143,
                 from /usr/include/c++/7/ios:39,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from t.cpp:3:
/usr/include/c++/7/bits/move.h:84:5: note: candidate: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&&)
     forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
     ^~~~~~~
/usr/include/c++/7/bits/move.h:84:5: note:   template argument deduction/substitution failed:
In file included from t.cpp:9:0:
../base/TaskQueue.h:24:47: note:   cannot convert ‘job’ (type ‘const int’) to type ‘std::remove_reference<int>::type&& {aka int&&}’
     void put(const T&& job) { std::forward<T> (job); }
                               ~~~~~~~~~~~~~~~~^~~~~
